[package]
name = "readability-text-cleanup"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/indicium-ag/readability-text-cleanup-rs"
license = "MIT"
description = "A Rust library for cleaning up text from HTML using Mozilla's Readability algorithm"

[lib]
crate_type = ["cdylib"]

[dependencies]
html2md = { path = "./html2md" }
lazy_static = "^1.4.0"
rayon = "^1.9.0"
regex = "^1.10.3"
wasm-bindgen = "^0.2.92"

[profile.dev]
rpath = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
#opt-level = 3
opt-level = "z"
#strip = "debuginfo"
strip = "symbols"
rpath = true